@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-16T00:51:26Z",
-  "count_outdated" : 1804,
-  "uniques_outdated" : 126,
+  "timestamp" : "2022-08-20T08:10:43Z",
+  "count_outdated" : 1805,
+  "uniques_outdated" : 127,
   "count" : 1908,
   "uniques" : 135,
   "views" : [
-    {
-      "timestamp": "2022-08-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 34,
