@@ -1,12 +1,7 @@
 {
-  "count": 104,
-  "uniques": 3,
+  "count": 103,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-08-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 34,
